[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
burn = { version = "0.11.1", features = ["wgpu", "train", "fusion"] }
burn-tensor = "0.11.1"
csv = { version = "1.3.0", features = [] }
rmp-serde = "1.1.2"
serde = "1.0.193"
rand = "0.8.5"
indicatif = "0.17.7"